# fixi

./: .gitignore  CLAUDE.md  HANDOFF-FROM-HQ.md  HANDOFF-NORTH-STAR.md  README.es.md  README.md
.claude/agents/: README.md  globalmvm-carlos-regression-prevention.md  globalmvm-elkin-ceo.md  globalmvm-jefferson-hyperautomation.md  globalmvm-jenny-product-owner.md  globalmvm-joaris-architect.md  globalmvm-john-bairo-architect.md  globalmvm-liset-data-ai.md  globalmvm-victor-operations.md
agent/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agent/.github/workflows/: example-fixi-resolve.yml
agent/azure-pipelines/: example-fixi-resolve.yml
agent/src/fixi_agent/: __init__.py  cli.py  cloner.py  hooks.py  orchestrator.py  parser.py  prompts.py
agent/tests/integration/: smoke_test.py
agent/tests/unit/: test_cloner.py  test_hooks.py  test_orchestrator.py  test_parser.py  test_prompts.py
docs/: CLIENT-FACING.md  PLAN.md  SPEC.md  conversacion-equipo-globalmvm.md  diagrams.md  globalmvm-review-simulation.md  resumen-ejecutivo-elkin.md  terraform-audit-report.md
docs/planning/: BACKLOG.md  SPRINT-1.md  SPRINT-2.md  dry-run-report.md  faq-defensivo.md
kanban/: .state.json  BOARD.md  README.md  update_board.py
kanban/history/: 2026-04-07.md  2026-04-08.md
kanban/tasks/: S1-T01-verify-skill-refs.md  S1-T02-audit-wiki-links.md  S1-T03-create-demo-repo.md  S1-T04-scaffold-solution.md  S1-T05-seed-bug-divide-by-zero.md  S1-T06-seed-perf-n-plus-one.md  S1-T07-seed-security-missing-authorize.md  S1-T08-failing-tests-for-bugs.md  S1-T09-write-work-items.md  S1-T10-demo-repo-claude-md.md  S1-T11-demo-repo-readme.md  S1-T12-rehearsal-github-wi-101.md  S1-T13-skill-azure-devops-parser.md  S1-T14-skill-azure-repos-pr.md  S1-T15-rehearsal-ado-wi-102-103.md  S1-T16-terraform-skeleton.md  S1-T17-polish-client-facing.md  S1-T18-update-github-description.md  S2-T01-agent-skeleton.md  S2-T02-install-sdk.md  S2-T03-prompts-loader.md  S2-T04-work-item-parser.md  S2-T05-cloner.md  S2-T06-orchestrator.md  S2-T07-smoke-test.md  S2-T08-guardrail-hooks.md  S2-T09-audit-log.md  S2-T10-cli.md  S2-T11-output-formatter.md  S2-T13-unit-tests.md  (+20 more)
skill/: SKILL.md
terraform/: .gitignore  .pre-commit-config.yaml  .terraform.lock.hcl  .tflint.hcl  README.md  locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
(+23 files in other folders)
