[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fixi-agent"
version = "0.1.0"
description = "Autonomous issue resolution agent built on Claude Agent SDK. Resolves tickets end-to-end from CI/CD pipelines."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Lots of Context LLC" },
]
keywords = ["claude", "agent", "ci-cd", "automation", "issue-tracking", "azure-devops", "github"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "click>=8.1",
    "pydantic>=2.6",
    "httpx>=0.27",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
fixi = "fixi_agent.cli:main"

[project.urls]
Homepage = "https://github.com/lotsofcontext/fixi"
Repository = "https://github.com/lotsofcontext/fixi"
Issues = "https://github.com/lotsofcontext/fixi/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["fixi_agent*"]

[tool.setuptools.package-data]
fixi_agent = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "integration: marks tests as integration (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long (let formatter handle)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
